# solana-amm

./: PROJECT_DESCRIPTION.md  README.md
anchor_project/: Anchor.toml  Cargo.toml  Notes.md  README.md  base58ToBytes.js  package-lock.json  txtx.yml  validate.json  wallet.json
anchor_project/coverage/: cmd_line  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
anchor_project/docs/: instruction_data.md
anchor_project/programs/anchor_project/: Cargo.toml  expanded.rs
anchor_project/programs/anchor_project/src/: FORMULAS.md  constants.rs  errors.rs  events.rs  lib.rs
anchor_project/programs/anchor_project/src/instructions/: add_liquidity.rs  collect_fees.rs  initialize_liquidity_pool.rs  mod.rs  remove_liquidity.rs  swap.rs
anchor_project/programs/anchor_project/src/state/: lp_provider.rs  mod.rs  pool.rs
anchor_project/programs/anchor_project/src/token_minting/: README.md  initialize.rs  mint.rs  mod.rs  state.rs
anchor_project/programs/anchor_project/tests/: mollusk_tests.rs
anchor_project/runbooks/: README.md
anchor_project/src/: index.ts  program-export.ts
anchor_project/tests/: anchor_project.ts
backend/: .env.example  Cargo.toml  README.md  data.json
backend/src/: lib.rs  main.rs  state.rs
backend/src/websocket_client/: listener.rs  mod.rs  request.rs  response.rs  types.rs  utils.rs
backend/src/websocket_client/events/: mod.rs  token_initialize.rs
frontend/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json
frontend/src/: app.tsx  index.css
(+49 files in other folders)
