[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.28"
actix-web = "4"
actix-cors = "0.7.1"
borsh = "1.5.7"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
futures-util = "0.3"
dotenv = "0.15.0"
rand = "0.9.2"
anchor-lang = "0.32.1"
base64 = "0.22.1"
